feat(event): add VideoSubmitted event publishing (#5)
* feat(event): add VideoSubmitted event publishing (#4)

- Add VideoSubmittedEvent record with video metadata for moderation
- Add VideoEventPublisher to publish events via ApplicationEventPublisher
- Extend VideoService.createVideo with event publishing overload
- Keep backwards-compatible deprecated createVideo for existing callers
- Add tests for VideoEventPublisher

* refactor: remove deprecated 5-arg createVideo method

The deprecated method was unused - all callers now use the 7-arg
version with submitterTrustTier and locationIds parameters.

Updated VideoController to pass trust tier from JWT and location IDs
from request. Updated tests to use the new method signature.

* refactor: simplify VideoController methods and enhance test assertions

---------

Co-authored-by: Claude Opus 4.5 <noreply@anthropic.com>